--- a/example/ff/templates/index3.html
+++ b/example/ff/templates/index3.html
@@ -9,32 +9,40 @@ body {
     /*background-image: url(./static/1.jpg)*/
 }
 .jumbotron {
-    background-image: url(./static/1.jpg);
-    background-size: cover
+    background-image: url(./static/33.jpg);
+    background-position: center center;
+}
+.bigpic {
+    font-family: Comic Sans MS;
+    text-shadow: 2px 2px 2px #666666;
 }
 </style>
-{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">SDS</a>
-        </div>
-    </div>
-</div>
-{% endblock %}
-
-{% block content%}
-
 <div class="jumbotron">
   <div class="container">
-  <h1>Hello, world!</h1>
+  <h1 class="bigpic">Hello, world!</h1>
   <p>...</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
   </div>
 </div>
+{% endblock %}
 
+
+
+
+
+
+
+{% block navbar %}
+
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">SDSvv</a>
+        </div>
+    </div>
+</div>
+{% endblock %}
+{% block content%}
 <div class="container">
     <div class="row">
         <div class="col-md-5">
@@ -49,7 +57,7 @@ body {
 
 <div class="container">
         <div class="row">
-            <div class="col-md-5 center-block">
+            <div class="col-md-2 center-block">
                 <h2>HTML5 and JS Apps</h2>
                 <p class="lead">jjjjj</p>
                 <p class="text-info">你大爷</p>
@@ -69,11 +77,16 @@ body {
 </table>
 <input class="btn btn-default" type="submit" value="Submit">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2>Ruby Apps</h2>
                 <img src="static/1.jpg"  class="img-responsive" class="img-rounded">
                 <img src="static/1.jpg"  class="img-responsive" class="img-circle">
-               
+                <p>dsfgdhdhethrjtytyjtdkudksrjrj 
+                    tryrturturturt
+                    trutruetu
+                    rtuturtutiyei6sfgj
+                    srtjujtrrs
+                    rtjrstjsrjrtsjrtsjsrtjsr</p>
             </div>
             <div class="col-md-2">
                 <h2>PHP MySQL Apps</h2>
