--- a/templates/base.html
+++ b/templates/base.html
@@ -1,38 +1,47 @@
 
 {% extends "bootstrap/base.html" %}
-{%block title%}{%endblock%}            
-{%block content%}
-<div class="container">
-    <div class="jumbotron">
-        <p>welcome to blog</p>
+{%block title%}Blog{%endblock%}            
+{% block head %}
+  {{ super() }}
+  <style type="text/css">
+    body {
+        background-color: white;
+    }
+    .jumbotron {
+        background-image: url(/static/da.jpg);
+        background-position: center center;
+        background-repeat: repeat-x;
+    }
+    .welcome {
+        font-family: Comic Sans MS;
+        text-shadow: 2px 2px 2px #666666;
+    }
+  </style>
+  
+  <div class="jumbotron">
+    <h1 class="welcome">Hello, world!</h1>
+  </div>
+  
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/core.js"></script>
+{%endblock%}
+
+{% block navbar %}
+  <div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">首页</a>
+        <a class="navbar-brand" href={{url_for('edit')}}>编辑</a>
+      </div>
     </div>
-</div>
+  </div>
+{%endblock%}
 
-<script src="https://cdn.bootcss.com/jquery/3.2.1/core.js"></script>
 
-{% macro render_pagination(pagination, endpoint)%}
-<nav>
-  <ul class="pagination">
-    <li>
-        <a href="{{url_for('home',page=pagination.prev().page)}}"><span aria-hidden="true">&laquo;</span></a>
-    </li>
-    {%for page in pagination.iter_pages()%}
-      {%if page%}
-        {%if page!=pagination.page%}
-         <li>
-             <a href="{{url_for(endpoint, page=page)}}">{{page}}</a>
-         </li>
-        {%else%}
-         <li><a href="">{{page}}</a></li>
-        {%endif%}
-      {%else%}
-        <li><a>...</a></li>
-      {%endif%}
-    {%endfor%}
-    <li>
-      <a href="{{url_for('home',page=pagination.next().page)}}"></a>
-    </li>
-  </ul>
-</nav>
-{%endmacro%}
+{%block content%}
+  {% for message in get_flashed_messages() %}
+    <div class="alert">
+      <button class="close"  data-dismiss="alert">&times;</button>
+        {{message}}
+      </div>
+  {% endfor %}
 {%endblock%}
