--- a/templates/post.html
+++ b/templates/post.html
@@ -13,6 +13,12 @@
           border-width: 2px;
           margin: 5px 5px 5px 5px;
       }
+   
+      .body {
+          padding: 5px 5px 5px 5px;
+          margin: 5px 5px 5px 5px;
+          overflow: hidden;
+      }
   </style>
 {%endblock%}
 
@@ -23,12 +29,14 @@
     <div class="row">
 
       <div class="col-md-8 main">
-        {%for post in posts%}
-          <div class="row">
+          <div class="body">
               <h1>{{post.title}}</h1>
-              <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+              {% if post.html_text %}
+                {{post.html_text|safe}} 
+              {% else %}
+                {{post.text}}
+              {%endif%}
           </div>
-        {%endfor%}
       </div>
 
       <div class="col-md-3 sidebar">
