--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">首页</a>
-        <a class="navbar-brand" href={{url_for('edit')}}>编辑</a>
+        <a class="navbar-brand" href={{url_for('add_article')}}>编辑</a>
       </div>
     </div>
   </div>
