--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">首页</a>
-        <a class="navbar-brand" href={{url_for('add_article')}}>编辑</a>
         <ul class="nav navbar-nav navbar-right">
           {% if current_user.is_authenticated %}
+            <li><a href={{url_for('add_article')}}>写文章</a></li>
             <li><a href="{{url_for('logout')}}">登出</a></li>
             <li><a>{{current_user.username}}</a></li>
           {% else %}
