--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,10 @@
   </div>
   
   <script src="https://cdn.bootcss.com/jquery/3.2.1/core.js"></script>
+  <script type="text/javascript"
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+
 {%endblock%}
 
 {% block navbar %}
