--- a/templates/index.html
+++ b/templates/index.html
@@ -14,30 +14,38 @@
           margin: 5px 5px 5px 5px;
       }
   </style>
+
 {%endblock%}
 
 
 {%block content%}
   {{super()}}
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
 
       <div class="col-md-8 main">
         {%for post in posts%}
-          <div class="row">
-              <h1>{{post.title}}</h1>
+          <div class="panel panel-default">
+            <div class="panel-title">{{post.title}}</div>
+            <div class="panel-body">
+              <p>{{post.text|truncate(10)}}</p>
               <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+            </div>
           </div>
         {%endfor%}
       </div>
 
       <div class="col-md-3 sidebar">
-        {%for post in sidebar%}
-          <div class="row">
-              <h1>{{post.title}}</h1>
-              <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            {%for post in sidebar%}
+              <div class="row">
+                  <h1>{{post.title}}</h1>
+                  <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+              </div>
+            {%endfor%}
           </div>
-        {%endfor%}
+        </div>
       </div>
 
     </div>
