--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,21 @@
 {% block head %}
   {{ super() }}
   <style type="text/css">
-    body {
+    .body {
         background-color: white;
     }
     .jumbotron {
         background-image: url(/static/da.jpg);
         background-position: center center;
         background-repeat: repeat-x;
+        margin: 0px 0px 0px 0px;
     }
     .welcome {
         font-family: Comic Sans MS;
         text-shadow: 2px 2px 2px #666666;
+    }
+    .navplus {
+        margin: 0px;
     }
   </style>
   
@@ -30,7 +34,7 @@
 {%endblock%}
 
 {% block navbar %}
-  <div class="navbar navbar-inverse" role="navigation">
+  <div class="navbar navbar-inverse navplus" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">首页</a>
@@ -52,7 +56,7 @@
 
 {%block content%}
   {% for message in get_flashed_messages() %}
-    <div class="alert">
+    <div class="alert alert-success">
       <button class="close"  data-dismiss="alert">&times;</button>
         {{message}}
       </div>
