--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
           margin: 5px 5px 5px 5px;
       }
 
+      .min-height {
+          min-height: 1000px;
+      }
+
       .sidebar {
           border-width: 2px;
           margin: 5px 5px 5px 5px;
@@ -27,7 +31,7 @@
   <div class="container-fluid body">
     <div class="row">
 
-      <div class="col-md-8 main">
+      <div class="col-md-8 main min-height">
         {%for post in posts%}
           <div class="panel panel-default">
             <div class="panel-title">{{post.title}}</div>
@@ -41,16 +45,31 @@
 
       <div class="col-md-3 sidebar">
         <div class="panel panel-default">
+          <h1>最近的文章</h1>
           <div class="panel-body">
             {%for post in sidebar%}
               <div class="row">
-                  <h1>{{post.title}}</h1>
+                  <h2>{{post.title}}</h2>
                   <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
               </div>
             {%endfor%}
           </div>
         </div>
       </div>
+
+      <div class="col-md-3 sidebar">
+        <div class="panel panel-default">
+          <h1>标签</h1>
+          <div class="panel-body">
+            {%for tag in sidebar_tag%}
+              <div class="row">
+                <a href="{{url_for('tag',tag=tag)}}">{{tag}}</a>  
+              </div>
+            {%endfor%}
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </div>
