Put login to nav right and add time for post

--- a/templates/post.html
+++ b/templates/post.html
@@ -36,10 +36,10 @@
     <div class="row">
 
       <div class="col-md-8 main">
-        <div class="body min-height">
-          <div class="panel panel-default min-height">
+        <div class="body">
+          <div class="panel panel-default">
             <div class="panel-title"><h1>{{post.title}}</h1></div>
-            <div class="panel-body">
+            <div class="panel-body min-height">
               {% if post.tag %}
                 {% for tag in post.tag.split(" ") %}
                   <span class="badge">{{tag}}</span></a>
@@ -51,6 +51,8 @@
               {% else %}
                 {{post.text}}
               {%endif%}
+
+              {{post.publish_date}}
             </div>
           </div>
   
