--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     }
     .navplus {
         margin: 0px;
+        padding: 0px 20px 0px 20px;
     }
   </style>
   
@@ -35,21 +36,17 @@
 
 {% block navbar %}
   <div class="navbar navbar-inverse navplus" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
         <a class="navbar-brand" href="/">首页</a>
         <ul class="nav navbar-nav navbar-right">
           {% if current_user.is_authenticated %}
             <li><a href={{url_for('add_article')}}>写文章</a></li>
             <li><a href="{{url_for('logout')}}">登出</a></li>
-            <li><a>{{current_user.username}}</a></li>
+            <li><a>{{current_user.username}}你好！</a></li>
           {% else %}
             <li><a href="{{url_for('login')}}">登入</a></li>
           {% endif%}
         </ul>
 
-      </div>
-    </div>
   </div>
 {%endblock%}
 
