--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
         margin: 0px;
         padding: 0px 20px 0px 20px;
     }
+    body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 { font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;}
+    p { line-height: 30px;}
+    
   </style>
   
   <div class="jumbotron">
