--- a/templates/tag.html
+++ b/templates/tag.html
@@ -36,7 +36,7 @@
           <div class="panel panel-default">
             <div class="panel-title">{{post.title}}</div>
             <div class="panel-body">
-              <p>{{post.text|truncate(10)}}</p>
+              <p>{{post.text|safe|truncate(50)}}</p>
               <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
             </div>
           </div>
@@ -45,11 +45,11 @@
 
       <div class="col-md-3 sidebar">
         <div class="panel panel-default">
-          <h1>最近的文章</h1>
+          <h2>最近的文章</h2>
           <div class="panel-body">
             {%for post in sidebar%}
               <div class="row">
-                  <h1>{{post.title}}</h1>
+                  <h4>{{post.title}}</h4>
                   <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
               </div>
             {%endfor%}
@@ -59,7 +59,7 @@
 
       <div class="col-md-3 sidebar">
         <div class="panel panel-default">
-          <h1>标签</h1>
+          <h2>标签</h2>
           <div class="panel-body">
             {%for tag in sidebar_tag%}
               <div class="row">
