Improve edit time

--- a/templates/post.html
+++ b/templates/post.html
@@ -53,11 +53,10 @@
                 {{post.text}}
               {%endif%}
 
-              {{post.publish_date}}
+              <span class="badge pull-right">编辑时间 {{post.publish_date}}</span>
             </div>
           </div>
-  
-           <a href="{{url_for("edit_article", post_id=post.id)}}"><button  type="button" class="btn btn-primary">Edit</button></a>
+            <a href="{{url_for("edit_article", post_id=post.id)}}"><button  type="button" class="btn btn-primary">Edit</button></a>
              
         </div>
       </div>
