--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <h1 class="welcome">Hello, world!</h1>
   </div>
   
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/core.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
   <script type="text/javascript"
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
