--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,11 @@
     <h1 class="welcome">Hello, world!</h1>
   </div>
   
-  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
   <script type="text/javascript"
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.css">
+
 
 {%endblock%}
 
@@ -61,4 +62,9 @@
         {{message}}
       </div>
   {% endfor %}
+{%endblock%}
+
+{%block scripts%}
+{{super()}}
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.js"></script>
 {%endblock%}
