--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,11 +43,11 @@
         <a class="navbar-brand" href="/">首页</a>
         <ul class="nav navbar-nav navbar-right">
           {% if current_user.is_authenticated %}
-            <li><a href={{url_for('add_article')}}>写文章</a></li>
-            <li><a href="{{url_for('logout')}}">登出</a></li>
+            <li><a href={{url_for('main.add_article')}}>写文章</a></li>
+            <li><a href="{{url_for('main.logout')}}">登出</a></li>
             <li><a>{{current_user.username}}你好！</a></li>
           {% else %}
-            <li><a href="{{url_for('login')}}">登入</a></li>
+            <li><a href="{{url_for('main.login')}}">登入</a></li>
           {% endif%}
         </ul>
 
