--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@
             <div class="panel-title">{{post.title}}</div>
             <div class="panel-body">
               <p>{{post.text|safe|truncate(50)}}</p>
-              <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+              <a href="{{url_for('main.post',post_id=post.id)}}">readmore</a>
             </div>
           </div>
         {%endfor%}
@@ -50,7 +50,7 @@
             {%for post in sidebar%}
               <div class="row">
                   <h4>{{post.title}}</h4>
-                  <a href="{{url_for('post',post_id=post.id)}}">readmore</a>
+                  <a href="{{url_for('main.post',post_id=post.id)}}">readmore</a>
               </div>
             {%endfor%}
           </div>
@@ -63,7 +63,7 @@
           <div class="panel-body">
             {%for tag in sidebar_tag%}
               <div class="row">
-                <a href="{{url_for('tag',tag=tag)}}">{{tag}}</a>  
+                <a href="{{url_for('main.tag',tag=tag)}}">{{tag}}</a>  
               </div>
             {%endfor%}
           </div>
